Fix desktop links gap bug

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -5,13 +5,9 @@ header {
     background-color: $introBlue;
     padding: 1.5625rem 1.25rem 3.125rem 1.25rem; // 25px 20px 50px 20px
 
-    @include breakpoint(large) { // Larger than 1023px
-        padding: 4.5625rem 5rem; // 73px 80px
-    }
-
     .header__links {
         a:not(last-child) {
-            padding-right: 3.5rem; // 56px
+            padding-right: 20px; // 56px
         }
     }
 
@@ -28,7 +24,21 @@ header {
 
         @include breakpoint(large) {
             font-size: 16px; // 16px
+            grid-gap: 56px;
+        }
+    }
+
+    
+    @include breakpoint(large) { // Larger than 1023px
+        padding: 4.5625rem 5rem; // 73px 80px
+        font-size: 16px; // 16px
+
+        .header__links {
+            a:not(last-child) {
+                padding-right: 56px;
+            }
         }
     }
 }
+
 
