--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -1,8 +1,10 @@
 .hero {
 
     background: $introBlue;
-    
+    text-align: center;
+
     img {
-        width: 550px;
+        width: 100%;
+        max-width: 716px;
     }
 }
